# DiceBot

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTROLE_JOUR_5-7.md  Dockerfile.bak  README.md  dicebot.yaml  main.py  pyproject.toml  requirements.txt  responce.md  test_vercel_local.py  vercel.json
.github/: CONTRIBUTING.md  SECURITY.md  branch-protection.json  gh-config.yml
.github/codeql/: codeql-config.yml
.github/codeql/queries/: financial-security.ql  qlpack.yml
.github/workflows/: auto-commit.yml  ci.yml  codeql-analysis.yml  dicebot-ci.yml  dicebot-production.yml  enterprise-optimized.yml  fast-ci.yml  qodana_code_quality.yml  release.yml  security-weekly.yml  security.yml  slack-bot-deploy.yml
DiceBot/: package-lock.json  package.json
api/: __init__.py  health.py  hello.py  index.py  ping.py  simple.py  slack-simple.py  slack-test.js  slack.py  slack_commands.py  slack_events.py  slack_interactive.py  slack_simple.py  status.py  test-node.js  test-simple.py  test.py  working.py
docs/: PROVABLY_FAIR.md  README.md  SETUP_TOKENS.md  USER_GUIDE.md  WORKFLOW_AUDIT_MASTER.md  architecture.md  best_practices_research.md  design_decisions.md  dice_game_rules.md  enterprise-free-stack.md  final_specifications.md  quick_start_plan.md  session2_enhancements.md  technical_specs.md  vision_philosophique.md
results/: strategy_Fibonacci_20250624_173959.json  strategy_Fibonacci_20250624_174554.json  strategy_Fibonacci_20250624_175958.json  strategy_Fibonacci_20250624_180024.json  strategy_Fibonacci_20250624_180051.json  strategy_Fibonacci_20250624_180508.json  strategy_Fibonacci_20250624_183953.json  strategy_Fibonacci_20250624_215111.json  strategy_Fibonacci_20250624_225955.json  strategy_Fibonacci_20250624_232521.json  strategy_Fibonacci_20250625_004001.json  strategy_Fibonacci_20250625_010630.json  strategy_Fibonacci_20250625_011018.json  strategy_FlatBetting_20250624_173704.json  strategy_FlatBetting_20250624_180115.json  strategy_FlatBetting_20250624_202130.json  strategy_FlatBetting_20250624_223517.json  strategy_FlatBetting_20250626_124350.json  strategy_Martingale_20250624_180057.json  strategy_Martingale_20250624_180453.json  strategy_Martingale_20250624_232735.json  strategy_comparison_20250624_173709.json  strategy_comparison_20250624_173808.json  strategy_comparison_20250624_173846.json  strategy_comparison_20250624_174607.json
scripts/: auto_commit.py  auto_commit.sh  clean-history.sh  commit_now.sh  fix_lint.py  gh-shortcuts.sh  pre-push-check.sh  setup-branch-protection.sh  setup-gh-aliases.sh  setup-github-cli.sh  setup-security.sh  smart_commit.py  start_slack_bot.py
src/DiceBot/: __main__.py
src/dicebot/core/: __init__.py  constants.py  dice_game.py  events.py  models.py  provably_fair.py
src/dicebot/integrations/: __init__.py  github_integration.py  monitoring.py  slack_bot.py  slack_server.py  webhook.py
src/dicebot/money/: __init__.py  session.py  vault.py
src/dicebot/simulation/: __init__.py  engine.py  runner.py
src/dicebot/strategies/: __init__.py  adaptive.py  (+10 more)
tests/: test_cli.py
tests/core/: test_dice_game.py  test_over_under.py  test_provably_fair.py  test_provably_fair_constraints.py
tests/integration/: test_bitsler_compatibility.py
tests/money/: test_session.py  test_vault.py
tests/simulation/: __init__.py  test_engine.py
tests/strategies/: test_adaptive.py  test_base.py  test_composite.py  test_dalembert.py  test_factory.py  test_fibonacci.py  test_flat.py  test_martingale.py  test_paroli.py
tests/utils/: test_validation.py
(+8 files in other folders)
